--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>ADev Site</title>
   </head>
   <body>
-    <a href="./index.html">ADev Site</a>
-    <a href="./privacy/index.html">Privacy</a>
+    <a href="./index.html" id="tab_button">ADev Site</a>
+    <a href="./privacy/index.html" id="tab_button">Privacy</a>
     <p>We Working on Site.</p>
   </body>
 </html>
