--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="./site.css">
     <title>ADev Site</title>
   </head>
   <body>
-    <a href="./index.html" id="tab_button">ADev Site</a>
-    <a href="./privacy/index.html" id="tab_button">Privacy</a>
+    <a href="./index.html" class="tab_button">ADev Site</a>
+    <a href="./privacy/index.html" class="tab_button">Privacy</a>
     <p>We Working on Site.</p>
   </body>
 </html>
