--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="./site.css">
-    <title>ADev Site</title>
+    <title>Home - ADev</title>
   </head>
   <body>
-    <a href="./index.html" class="tab_button">ADev Site</a>
+    <a href="./index.html" class="tab_button">Home</a>
     <a href="./privacy/index.html" class="tab_button">Privacy</a>
     <p>We Working on Site.</p>
   </body>
