--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Home - ADev</title>
   </head>
   <body>
-    <a href="./index.html" class="tab_button">Home</a>
-    <a href="./privacy/index.html" class="tab_button">Privacy</a>
+    <a href="/index.html" class="tab_button">Home</a>
+    <a href="/privacy/" class="tab_button">Privacy</a>
     <p>We Working on Site.</p>
   </body>
 </html>
