--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,6 +3,8 @@
     <title>Privacy - ADev</title>
   </head>
   <body>
+    <a href="/index.html" class="tab_button">Home</a>
+    <a href="/privacy/" class="tab_button">Privacy</a>
     <h1>Privacy Of ADev Apps (or Games)</h1>
     <p>We Protects and does not utilize Personal Information.</p>
   </body>
