--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="/site.css">
     <title>Privacy - ADev</title>
   </head>
   <body>
