--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <a href="/index.html" class="tab_button">Home</a>
     <a href="/privacy/" class="tab_button">Privacy</a>
+    <a href="/applications/" class="tab_button">Applications</a>
     <p>We Working on Site.</p>
   </body>
 </html>
