--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/site.css">
+    <script src="https://adev531.github.io/ADSystem/adsystem.js"></script>
     <title>Home - ADev</title>
   </head>
   <body>
